fixing the wrong position for the picture

--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ header .fa-bars{
 }
 
 .about .row .content .jw4{
-    margin-left: 340px;
+    margin-left: 45px;
 }
 
 .btn{
